<resources>
    <string name="app_name">ScheduleMeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonymously_logout_error">It wasn\'t possible to logout</string>
    <string name="anonymously_login_error">It wasn\'t possible to login</string>
    <string name="anonymously_login_success">It wasn\'t possible to complete the login</string>
    <string name="invalid_password">Invalid password, make sure to match all the conditions</string>
    <string name="invalid_email">Invalid e-mail, make sure to type a valid one</string>
    <string name="email_password_error">It wasn\t possible to register your account</string>
    <string name="incomplete_login_error">It wasn\t possible to login into your account</string>
    <string name="error_login_with_google">It wasn\'t possible to connect with your google account</string>
    <string name="hint_email">example@example.com</string>
    <string name="hint_password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_text_view_button">Log In</string>
    <string name="sign_up_text_button">Sign up</string>
    <string name="or">or</string>
    <string name="clock_bg">clock_background</string>
    <string name="skip">skip</string>
    <string name="hint_material_by_pass">                         . </string>
    <string name="confirm_password">confirm password</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="choose_your_account_type">Account type</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="phone_number_with_area_code">(99)99999–9999</string>
    <string name="back_arrow">back Arrow</string>
    <string name="blank_field_error">make sure to fill all the fields</string>
    <string name="invalid_email_edit_text_error">Invalid e-mail</string>
    <string name="invalid_email_blank">please fill out the e-mail field</string>
    <string name="invalid_password_edit_text_error">Invalid password</string>
    <string name="invalid_password_must_equal">make sure to set the same password</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="your_password_must_have">Your password must have:</string>
    <string name="_6_characters"> 6 characters</string>
    <string name="_1_digit"> 1 digit  </string>
    <string name="_1_special_character"> 1 special character</string>
    <string name="_1_upper_letter"> 1 upper letter</string>
    <string name="select_an_image">Select an image</string>
    <string name="choose_your_option">Choose Your Option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="uploading_your_photo">Uploading your photo</string>
    <string name="button_add_photo">button Add photo</string>
    <string name="make_sure_to_enable_cam_permi">Make Sure To enable Camera Permissions</string>
</resources>