<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainColor"
    tools:context=".feature_login.presentation.register.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_clockpng"
        android:contentDescription="@string/clock_bg"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/box_login_cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">


      <ImageView
          android:id="@+id/backArrow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:background="@drawable/ic_right_arrow"
          android:backgroundTint="@color/primaryPink"
          android:layout_margin="16dp"
          android:rotation="180"
          app:layout_constraintBottom_toTopOf="@id/name"
          android:contentDescription="@string/back_arrow" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text_button"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            android:textColor="@color/mainColor"
            app:layout_constraintTop_toTopOf="@id/box"
            app:layout_constraintBottom_toTopOf="@id/name"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/background_edit_text"
            android:hint="@string/name"
            android:layout_marginTop="16dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:minHeight="38dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/background_edit_text"
            android:hint="@string/phone_number_with_area_code"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:minHeight="38dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:visibility="gone"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintWidth_percent=".8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            android:textColorHint="@color/hintColor"
            android:hint="@string/hint_material_by_pass"
            app:hintTextColor="@color/hintColor"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toBottomOf="@id/confirmPassword"
            app:layout_constraintEnd_toEndOf="@id/phone"
            app:layout_constraintStart_toStartOf="@id/phone"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:hint="@string/hint_password"
                android:textColorHint="@color/hintColor"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:minHeight="38dp"
                android:paddingStart="20dp"
                android:background="@drawable/background_edit_text"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            android:textColorHint="@color/hintColor"
            android:hint="@string/hint_material_by_pass"
            android:visibility="visible"
            app:hintTextColor="@color/hintColor"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/spinner"
            app:layout_constraintEnd_toEndOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintWidth_percent=".8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/hintColor"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="38dp"
                android:paddingStart="20dp"
                android:background="@drawable/background_edit_text"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:dropDownVerticalOffset="40dp"
            app:layout_constraintWidth_percent=".4"
            app:layout_constraintStart_toStartOf="@id/email"
            tools:listitem="@layout/account_type_item"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/passwordValidationsBox"
            android:background="@drawable/background_spinner"
            app:layout_constraintTop_toBottomOf="@id/confirmPassword"/>

       <LinearLayout
           android:id="@+id/passwordValidationsBox"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_margin="16dp"
           app:layout_constraintBottom_toTopOf="@id/registerButton"
           app:layout_constraintTop_toBottomOf="@id/spinner"
           app:layout_constraintStart_toStartOf="@id/email"
           app:layout_constraintEnd_toEndOf="@id/email">

           <TextView
               android:id="@+id/description"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/your_password_must_have"
               android:layout_gravity="center"
               />
           <TextView
               android:id="@+id/numberofletters"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_6_characters"/>
           <TextView
               android:id="@+id/digit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_1_digit"/>
           <TextView
               android:id="@+id/special"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_1_special_character"/>

           <TextView
               android:id="@+id/upLetter"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_1_upper_letter"/>

       </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/registerButton"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/register_button"
            android:elevation="5dp"
            android:minHeight="38dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintEnd_toEndOf="@id/name"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>