<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_register"
    tools:context=".feature_login.presentation.login.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_clockpng"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:contentDescription="@string/clock_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/box_login_cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:textAllCaps="false"
            app:chainUseRtl="true"
            android:elegantTextHeight="true"
            android:drawableTint="@color/primaryPink"
            android:text="@string/skip"
            android:drawableTop="@drawable/ic_right_arrow"
            app:layout_constraintVertical_chainStyle="packed"
            android:background="@color/fui_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/background_edit_text"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintWidth_percent=".8" />


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_margin="10dp"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/login_button"
            android:elevation="5dp"
            android:minHeight="48dp"
            android:text="@string/login_text_view_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/registerButton"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_button"
            android:elevation="5dp"
            android:minHeight="48dp"
            android:text="@string/sign_up_text_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintStart_toEndOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <TextView
            android:id="@+id/tvSignInWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textColor="@color/mainColor"
            app:layout_constraintBottom_toTopOf="@id/google_button"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvSignInWithGoogle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google_button"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>